# loki

./: .codecov.yml  .gitignore  .pylintrc  .pylintrc_ipynb  AGENTS.md  AUTHORS.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  codecov.yml  conftest.py  default_config.yml  install  install.sh  log  loki-analyse.py  loki-post-import.cmake.in  populate  pyproject.toml  pytest.ini  remaining_bugs_investigation.md  requirement.txt  requirements.txt  setup.cfg  setup.py  test_sc_1.F90  test_sc_2.F90  test_sc_3.F90  test_sc_4.F90  test_sc_potential_5.F90  test_sc_potential_6.F90
.github/workflows/: code_checks.yml  documentation.yml  documentation_clean-up.yml  lint_tests.yml  regression_tests.yml  tests.yml
cmake/: CMakeLists.txt  claw_compiler.cmake  get_python_wheels.cmake  loki_find_executables.cmake  loki_get_python_wheels.cmake  loki_python_macros.cmake  loki_transform.cmake  loki_transform_helpers.cmake  omni_compiler.cmake  python_venv.cmake
cmake/cmake-jdk-ant/: CMakeLists.txt  README.md
cmake/cmake-jdk-ant/cmake/module/: FindAnt.cmake
docs/: Makefile  requirements.txt  sites-manager.py
docs/source/: analysis.rst  backends.rst  conf.py  contributing.rst  first_steps.rst  frontends.rst  getting_started.rst  index.md  index.rst  install.rst  internal_representation.rst  loki_api.rst  loki_lint.rst  loki_pragma_model.csv  loki_scripts.rst  loki_transform.rst  notebooks.rst  programming_models.rst  scripts.rst  transform.rst  using_loki.rst  utils.rst  visitors.rst
ecir/: __init__.py  codegen.py  expression.py  generate.py  generator.py  helpers.py  ir.py  loop.py  sourcefile.py  subroutine.py  tools.py  types.py  visitors.py
example/: 01_reading_and_writing_files.ipynb  02_working_with_the_ir.ipynb  03_loop_fusion.ipynb  04_creating_new_visitors.ipynb  05_argument_intent_linter.ipynb  06_array_data_dependency_detection.ipynb  06_transformations_and_the_scheduler.ipynb  Argument_intent_linter.ipynb  Creating_new_visitors.ipynb  Loop_fusion.ipynb  README.md
example/scripts/: intent_lint.py
example/src/: cloudsc.F90  cloudsc_driver_mod.F90  depth1.F90  depth2.F90  intent_test.F90  loop_fuse.F90  phys_driver.F90  phys_mod.F90  wrapper.F90
genai_examples/: convect_closure_adjust_shal.F90  convect_closure_adjust_shal.py  dace_convect_closure_adjust_shal.py  genai.md  transform_convect_closure_adjust_shal_answer.json  transform_convect_closure_adjust_shal_answer.md
lint_rules/: pyproject.toml  setup.cfg  setup.py
lint_rules/lint_rules/: __init__.py  debug_rules.py  ifs_arpege_coding_standards.py  ifs_coding_standards_2011.py  sc.py  single_column.py
lint_rules/tests/: conftest.py  test_debug_rules.py  test_ifs_arpege_coding_standards.py  test_ifs_coding_standards_2011.py
loki/: __init__.py  codegen.py  compiler.py  config.py  dimension.py  expression.py  function.py  generator.py  helpers.py  ir.py  logging.py  module.py  pragma_utils.py  preprocessing.py  program_unit.py  scheduler.py  scope.py  sourcefile.py  subroutine.py  tools.py  transformation.py  types.py  visitors.py
loki/analyse/: AbstractDFA.py  ConstantPropagationAnalysis.py  DataFlowAnalysis.py  (+11 more)
scripts/: __init__.py  analyse_files.py  convert.py  convert_single_column.py  lint_rules_ifs.py  linter.py  loki-build.py  loki-intent-lint.py  loki-lint.py  loki-transform-maxeler.py  loki-transform.py  loki_ecphys_gen.py  loki_intent_lint.py  loki_lint.py  loki_transform.py  loop_merge_v0.py  raps_deps.py  scheduler.py  sourceprocessor.py  transform.py  transform_test.py
tests/: callgraph_block  callgraph_config_file  callgraph_multiple_combined  callgraph_multiple_separate_A  callgraph_partial  callgraph_simple  conftest.py  kind_map  kind_parameters_mod.f90  multiply_mod.f90  multiply_mod_c.f90  multiply_plus_one_mod.f90  parameters_mod.f90  radiation_random_numbers.F90  region_to_call_mod.f90  replace_kind_parameters_mod.f90  routine_copy_py.py  routine_copy_stream_py.py  routine_fixed_loop_py.py  routine_moving_average_py.py  test_analyse_array_data_dependency_detection.py  test_analyse_dataflow.py  test_batch.py  test_c_like_gen.py  test_cmake.py  test_control_flow.py  test_cufgen.py  test_derived_types.py  test_dimension.py  test_examples.py  test_expression.py  test_extract_contained_procedures.py  test_extract_contained_subroutines.py  test_fgen.py  test_fparser.py  test_frontends.py  test_hoist.py  test_interfaces.py  test_interprocedural_analysis.py  test_ir.py  (+53 more)
transformations/: pyproject.toml  setup.cfg
transformations/tests/: conftest.py  test_argument_shape.py  test_block_index_inject.py  test_cloudsc.py  test_cloudsc2_tl_ad.py  test_data_offload.py  test_dr_hook.py  test_drhook.py  test_ecwam.py  test_global_var_offload.py  test_parallel_routine_dispatch.py  test_pool_allocator.py  test_raw_stack_allocator.py  test_scc_cuf.py  test_single_column.py  test_single_column_coalesced.py  test_transform_derived_types.py  test_typebound_procedures.py  test_utility_routines.py
transformations/tests/sources/projArgShape/: kernel_a_mod.F90  var_module_mod.F90
transformations/tests/sources/projGlobalVarImports/: functions.F90  kernel_derived_type.F90  kernels.F90  moduleA.F90
transformations/tests/sources/projParallelRoutineDispatch/: cpphinp.intfb.h  dispatch_routine.F90  path_map_openacc.pkl
transformations/tests/sources/projSccCuf/module/: driver.f90  kernel.f90
transformations/transformations/: __init__.py  argument_shape.py  block_index_transformations.py  data_offload.py  derived_types.py  dr_hook.py  drhook.py  field_index.pkl  global_var_offload.py  idem_debug.py  parallel_routine_dispatch.py  pool_allocator.py  raw_stack_allocator.py  scc_annotate.py  scc_base.py  scc_cuf.py  scc_demote.py  scc_devector.py  scc_hoist.py  scc_revector.py  single_column_annotate.py  single_column_base.py  single_column_claw.py  single_column_coalesced.py  single_column_coalesced_extended.py  single_column_coalesced_vector.py  single_column_coalesced_wrapper.py  single_column_hoist.py  typebound_procedures.py  utility_routines.py
transformations/transformations/tests/: test_argument_shape.py
(+754 files in other folders)
