# Make sure we use setuptools and have all required dependencies for that
[build-system]
requires = [
  "setuptools >= 75.0.0",
  "wheel",
  "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "loki"
authors = [
  {name = "ECMWF", email = "user_support_section@ecmwf.int"},
]
description = "Experimental Fortran IR to facilitate source-to-source transformations"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dynamic = ["version", "readme"]
dependencies = [
  "numpy >= 2.0",  # essential for tests, loop transformations and other dependencies
  "pymbolic==2022.2",  # essential for expression tree
  "PyYAML",  # essential for loki-lint
  "pcpp",  # essential for preprocessing
  "more-itertools",  # essential for SCC transformation
  "click",  # essential for CLI scripts
  "click-option-group",  # essential for CLI scripts
  "tomli ; python_version < '3.11'",  # essential for scheduler configuration
  "networkx",  # essential for scheduler and build utilities
  "fparser>=0.0.15",  # (almost) essential as frontend
  "graphviz",  # optional for scheduler callgraph
  "tqdm",  # optional for build utilities
  "coloredlogs",  # optional for loki-build utility
  "junit_xml",  # optional for JunitXML output in loki-lint
  "codetiming",  # essential for scheduler and sourcefile timings
  "pydantic>=2.0,<2.10.0",  # type checking for IR nodes
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "coverage2clover",
  "pylint!=2.11.0,!=2.11.1",
  "pandas",
  "f90wrap>=0.2.15",
  "nbconvert",
  "tomli_w",
]
dace = [
  "dace>=1.0; python_version < '3.13'",
]
docs = [
  "sphinx",  # to build documentation
  "recommonmark",  # to allow parsing markdown
  "sphinx-rtd-theme",  # ReadTheDocs theme
  "myst-parser",  # Markdown parser for sphinx
  "nbsphinx",  # Jupyter notebook parser for sphinx
  "sphinx-design",  # Add panels, cards and dropdowns for sphinx
]
examples = [
  "jupyter",
  "ipyparams",
]

[project.scripts]
"loki-transform.py" = "loki.cli.loki_transform:cli"
"loki-lint.py" = "loki.cli.loki_lint:cli"

[tool.setuptools]
license-files = ["LICENSE", "AUTHORS.md"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "INSTALL.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = [
  "loki",
  "loki.*",
  "scripts"
]
exclude = [
  "build*",
  "cmake*",
  "docs*",
  "example*",
  "lint_rules*",
  "loki_env*",
]
namespaces = false

# Enable SCM versioning
[tool.setuptools_scm]
