[metadata]
name = loki
version = attr: loki.__version__
description = Experimental Fortran IR to facilitate source-to-source transformations
long_description = file: README.md
long_description_content_type = text/markdown
author = ECMWF
author_email = user_support_section@ecmwf.int

[options]
packages = find:
install_requires =
    numpy
    click
    toml
    networkx
    graphviz
    fastcache
    cached-property
    coloredlogs
    tqdm
    pymbolic
    PyYAML
    pcpp
    more-itertools
    fparser>=0.0.13
scripts =
    scripts/loki-transform.py
    scripts/loki-lint.py

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage2clover
    pylint!=2.11.0,!=2.11.1
    pytest-pylint
    pandas
    f90wrap>=0.2.3
    junit_xml
ofp =
    open-fortran-parser @ git+https://github.com/mlange05/open-fortran-parser-xml@mlange05-dev#egg=open-fortran-parser
dace =
    dace>=0.11.2
docs =
    sphinx  # to build documentation
    recommonmark  # to allow parsing markdown
    sphinx-rtd-theme  # ReadTheDocs theme
    myst-parser  # Markdown parser for sphinx
    sphinx-panels  # Add panels, cards and dropdowns for sphinx

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
ignore = F403,E226,E731,W605
