[metadata]
name = loki
version = attr: loki.__version__
description = Experimental Fortran IR to facilitate source-to-source transformations
long_description = file: README.md
long_description_content_type = text/markdown
author = ECMWF
author_email = user_support_section@ecmwf.int

[options]
packages = find:
install_requires =
    numpy  # essential for tests, loop transformations and other dependencies
    pymbolic  # essential for expression tree
    PyYAML  # essential for loki-lint
    pcpp  # essential for preprocessing
    more-itertools  # essential for SCC transformation
    click  # essential for CLI scripts
    toml  # essential for scheduler configuration
    networkx  # essential for scheduler and build utilities
    fparser>=0.0.13  # (almost) essential as frontend
    graphviz  # optional for scheduler callgraph
    fastcache  # optional for faster processing
    cached-property  # optional for faster processing
    tqdm  # optional for build utilities
    coloredlogs  # optional for loki-build utility
scripts =
    scripts/loki-transform.py
    scripts/loki-lint.py

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage2clover
    pylint!=2.11.0,!=2.11.1
    pytest-pylint
    pandas
    f90wrap>=0.2.3
    junit_xml
ofp =
    open-fortran-parser @ git+https://github.com/mlange05/open-fortran-parser-xml@mlange05-dev#egg=open-fortran-parser
dace =
    dace>=0.11.2
docs =
    sphinx  # to build documentation
    recommonmark  # to allow parsing markdown
    sphinx-rtd-theme  # ReadTheDocs theme
    myst-parser  # Markdown parser for sphinx
    sphinx-panels  # Add panels, cards and dropdowns for sphinx

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
ignore = F403,E226,E731,W605
